# breathe-flow-pipeline

./: .env.example  .gitignore  Dockerfile.dashboard  Dockerfile.ingest  Dockerfile.kestra  README.md  cloudbuild.yaml  docker-compose.kestra-traefik.yml  docker-compose.traefik.yml  docker-compose.vps.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
dashboard/: app.py  requirements.txt
dashboard/.streamlit/: config.toml
dbt/: README.md  dbt_project.yml  profiles.yml.example
dbt/models/openaq/: fct_station_coverage.sql  schema.yml  sources.yml  stg_openaq_raw.sql
deploy/: nginx_kestra.letterscode.com.conf
docs/: Caddyfile.kestra.example  deployment_alternatives.md  kestra-stack.service.example  nginx_kestra.conf.example  vps_subdomain_setup.md
kestra/flows/: breatheflow_openaq_to_bigquery.yml  openaq_ingestion_flow.yml  openaq_to_bigquery.yml
scripts/: check_bq_load.py  get_id_token.py  get_secret.py  ingest_openaq.py  load_to_bq.py  run_dbt.sh  run_pipeline.py
terraform/: cloud_run_scheduler.tf  gke_workload_identity.tf  kestra_service_account.tf  kestra_vm.tf  main.tf  outputs.tf  provider.tf  sample_data.tf  secret_manager.tf  variables.tf
tmp/: gcloud_shell_commands_output.txt  install_compose.sh  vps_logs.txt
