[project]
name = "breathe-flow-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=3.10.1",
    "google-cloud-bigquery>=3.11.0",
    "db-dtypes>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "flask>=3.0.0",
    "streamlit>=1.33.0",
    "plotly>=5.20.0",
]
